--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Now Playing List</string>
+    <string name="notification">Notification</string>
+    <string name="settings">Settings</string>
 </resources>
