--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Now Playing List</string>
     <string name="notification">Notification</string>
     <string name="settings">Settings</string>
+    <string name="song_cover">Song cover</string>
 </resources>
