Support multi language clean up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="notification">Notification</string>
     <string name="settings">Settings</string>
     <string name="song_cover">Song cover</string>
+    <string name="not_compatible_text">Sorry, your device language is not yet compatible, come back later :)</string>
 </resources>
